--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -55,6 +55,10 @@
         margin-left: auto;
     }
 
+    input[type="checkbox"] {
+        width: 30px;
+        height: 30px;
+    }
     </style>
 
 @if (User.IsInRole("admin"))
@@ -95,42 +99,70 @@
                     </div>
                     <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="1" />
 
-                    
                     @if (ViewBag.Dopple != null)
                     {
-                        <br />
-                        <div class="form-group">
-                            <label>Aktuelles Bild:</label>
-                            <br />
-                            <img src="@("/compression/"+ @ViewBag.Dopple.ImageName)"  alt="Uploaded Image" style="max-width: 200px;" />
-
-                            <input type="hidden" name="OldImage" value=" @ViewBag.Dopple.ImageName" />
-                        </div>
-
-                        <div id="Image-load-product">
-
-                            <div class="Image-load_item">
-                                <label asp-for="ImageFile" class="control-label"></label>
-                                <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                                <span asp-validation-for="ImageFile" class="text-danger"></span>
-                                @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
-
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" name="flexSwitchCheckChecked" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
-                                </div>
-
-                            </div>
-
-                            <div class="Image-load_item">
-                                <h5 for="Images">Bilder auswählen:</h5>
-                                <input type="file" name="Images" multiple class="form-control" />
-                            </div>
-                        </div>
-
                         <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">
                             <div id="form-info">
-                            
+
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" onchange="changeLoad_image(event.target.checked)" name="flexSwitchCheckChecked" id="flexSwitchCheckChecked" checked>
+                                </div>
+
+                                <div id="Image-load_item">
+                                    <label asp-for="ImageFile" class="control-label"></label>
+                                    <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
+                                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+                                    @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                                </div>
+
+                                <div id="loadServerItem" style="display:none">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" name="Server_render" readonly id="loadItem" aria-describedby="button-addon2">
+                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Load</button>
+                                    </div>
+                                </div>
+
+                                <div class="modal fade" id="AllServerImage" tabindex="-1">
+                                    <div class="modal-dialog modal-xl">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h6 class="modal-title"></h6>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div style="display:grid;grid-template-columns:repeat(2,auto)">
+                                                    @foreach (var imageName in ViewBag.ServerImages)
+                                                    {
+                                                        <div style="border:1px solid red" id="ChoiseItem">
+                                                            <input type="checkbox" class="form-check" height="30" width="30" />
+                                                            <img src="@("/compression/" + imageName)" style="padding:5px" height="300" width="300" alt="@imageName" />
+                                                        </div>
+                                                    }
+                                                </div>
+
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Load</button>
+                                                <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="Image-load_item">
+                                    <h5 for="Images">Bilder auswählen:</h5>
+                                    <input type="file" name="Images" multiple class="form-control" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Aktuelles Bild:</label>
+                                    <br />
+                                    <img src="@("/compression/"+ @ViewBag.Dopple.ImageName)" alt="Uploaded Image" style="max-width: 200px;" />
+
+                                    <input type="hidden" name="OldImage" value=" @ViewBag.Dopple.ImageName" />
+                                </div>
+
                             <div>
                                 <h5>Name</h5>
                                 <input asp-for="Name" value="@ViewBag.Dopple.Name" required class="form-control" type="text" name="Name" />
@@ -291,29 +323,59 @@
                     }
                     else
                     {
-                        <div id="Image-load-product">
-
-                            <div class="Image-load_item">
-                                <label asp-for="ImageFile" class="control-label"></label>
-                                <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                                <span asp-validation-for="ImageFile" class="text-danger"></span>
-                                @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                        <div>
+                            <div id="form-info" >
 
                                 <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" name="flexSwitchCheckChecked" id="flexSwitchCheckChecked" checked>
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
+                                    <input class="form-check-input" type="checkbox" role="switch" onchange="changeLoad_image(event.target.checked)" name="flexSwitchCheckChecked" id="flexSwitchCheckChecked" checked>
                                 </div>
-                            </div>
 
-                            <div class="Image-load_item">
-                                <h5 for="Images">Bilder auswählen:</h5>
-                                <input type="file" name="Images" multiple class="form-control" />
-                            </div>
-                        </div>
+                                <div  id="Image-load_item">
+                                    <label asp-for="ImageFile" class="control-label"></label>
+                                    <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
+                                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+                                    @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                                </div>
 
-                        <div>
+                                <div id="loadServerItem" style="display:none">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" name="Server_render" readonly id="loadItem" aria-describedby="button-addon2">
+                                        <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#AllServerImage" type="button" id="button-addon2">Load</button>
+                                    </div>
+                                </div>
 
-                            <div id="form-info" >
+                                <div class="modal fade" id="AllServerImage" tabindex="-1">
+                                    <div class="modal-dialog modal-xl">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h6 class="modal-title"></h6>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div style="display:grid;grid-template-columns:repeat(2,auto)">
+                                                    @foreach (var imageName in ViewBag.ServerImages)
+                                                    {
+                                                        <div style="border:1px solid red" id="ChoiseItem">
+                                                            <input type="checkbox" class="form-check" height="30" width="30" />
+                                                            <img src="@("/compression/" + imageName)" style="padding:5px" height="300" width="300" alt="@imageName" />
+                                                        </div>
+                                                    }
+                                                </div>
+                                               
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" onclick="ChoiseImage()" data-bs-dismiss="modal">Load</button>
+                                                <button type="button" class="btn danger" data-bs-dismiss="modal">Schließen</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="Image-load_item">
+                                    <h5 for="Images">Bilder auswählen:</h5>
+                                    <input type="file" name="Images" multiple class="form-control" />
+                                </div>
 
                                 <div>
                                     <h5>Name</h5>
@@ -494,18 +556,37 @@
 
     <script type="text/javascript">
 
-         document.querySelectorAll('input[name="flexSwitchCheckChecked"]').forEach((input) => {
-            
-            input.addEventListener('change', function() 
-            {
-                if (input.checked === 'true') {
+        function ChoiseImage() {
 
-                } else {
-                   
+            let All_Items_Img = document.querySelectorAll("#ChoiseItem");
+            let serverImg = document.getElementById("loadItem");
+
+            All_Items_Img.forEach((item) => {
+
+                if (item.childNodes[1].checked == true) {
+                    console.log(item.childNodes[3].alt);
+                   serverImg.value = item.childNodes[3].alt;
                 }
             });
-        });
+        }
 
+        function changeLoad_image(item)
+        {
+            let loadblock = document.getElementById("loadServerItem");
+            let imageBlock = document.getElementById("Image-load_item");
+
+                if (item === true) 
+                {
+                    imageBlock.style.display = "block";
+                    loadblock.style.display = "none";
+                }
+                else 
+                {
+                    imageBlock.style.display = "none";
+                    loadblock.style.display = "block";
+                }
+          
+        }
 
         function ImgZiseUp(id) 
         {
