--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Schop/zylinder_page.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Schop/zylinder_page.cshtml
@@ -278,6 +278,8 @@
         let priceDoppelInternCost = @Html.Raw(ViewBag.CostDoppelIntern);
         let priceDoppelAussenCost = @Html.Raw(ViewBag.CostDoppelAussen);
 
+        let kleinCountItem = @Html.Raw(ViewBag.CountDoppelInter)|| null;
+
 
         let kleinPrice = @Html.Raw(ViewBag.DopelzylinderInternKleinPreis)|| null;
         let normalDopelSize = @Html.Raw(ViewBag.DopelzylinderInternNormal)|| null;
