--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -1,9 +1,6 @@
 ﻿@model schliessanlagen_konfigurator.Models.Profil_KnaufzylinderZylinder.Profil_Knaufzylinder;
 @{
     ViewData["Title"] = "Profil Knaufzylinder";
-    var kleinAussen = ViewBag.KleinAussen;
-    var resultAussen = (kleinAussen != null) ? kleinAussen.aussen : 0;
-    var resultPreis = (kleinAussen != null) ? kleinAussen.costSizeAussen : 0;
 }
 <style>
     a {
@@ -278,46 +275,63 @@
                                 </div>
 
                                 <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+
                                     <div>
                                         <h5>Für zylinder aussen klein</h5>
                                     </div>
-                                    <div id="kleinGrose">
-                                        <div>
-                                            <div>
-                                                <h5>Aussen</h5>
-                                                <input class="form-control" type="number" value="@resultAussen" name="ausKlein" />
+                                    @if (ViewBag.KleinAussen != null)
+                                    {
+                                        int countKleinZise = 1;
+
+                                        @for (int f = 0; f < ViewBag.KleinAussen.Count; f++)
+                                        {
+                                            int countItem = 0;
+                                            var kleinAussen = ViewBag.KleinAussen[f];
+                                            var resultAussen = (kleinAussen != null) ? kleinAussen.aussen : 0;
+                                            var resultPreis = (kleinAussen != null) ? kleinAussen.costSizeAussen : 0;
+
+                                            <div id="kleinGrose" class="kleinZise-@countKleinZise">
+                                                <div>
+                                                    <div>
+                                                        <h5>Aussen</h5>
+                                                        <input type="number" class="form-control" value="@resultAussen" name="ausKlein" />
+                                                    </div>
+                                                    <div>
+                                                        <h5>Preis</h5>
+                                                        <input type="number" class="form-control" step="0,00" value="@resultPreis" name="ausKleinPreis" />
+                                                    </div>
+                                                </div>
+                                                <div class="arrow-right">
+                                                </div>
+                                                <div>
+                                                    <table class="table">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Wert</th>
+                                                                <th>Preis</th>
+                                                                <th><button type="button" onclick="PlusKleinIntert('@countKleinZise')" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern('@countKleinZise')">-</button></th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody id="kleiIntern">
+
+                                                            @foreach (var list in kleinAussen.Doppel_Innen_klein)
+                                                            {
+                                                                <tr>
+                                                                    <th><input name="internDoppelKlein" id="interKlein" class="form-control" value="@list.Intern" type="number" step="0,01" /></th>
+                                                                    <td><input name="priesDoppelKlein" class="form-control" type="number" value="@list.costSizeIntern" step="0,01" /></td>
+                                                                </tr>
+                                                                countItem++;
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                    <input type="hidden" name="KleinZiseCount" value="@countItem" id="KleinZiseCount" />
+                                                </div>
                                             </div>
-                                            <div>
-                                                <h5>Preis</h5>
-                                                <input class="form-control" type="number" step="0,00" value="@resultPreis" name="ausKleinPreis" />
-                                            </div>
-                                        </div>
-                                        <div class="arrow-right">
-                                        </div>
-                                        <div>
-                                            <table class="table">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Wert</th>
-                                                        <th>Preis</th>
-                                                        <th><button type="button" onclick="PlusKleinIntert()" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern()">-</button></th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="kleiIntern">
+                                            countKleinZise++;
+                                        }
+                                    }
 
-                                                    @foreach (var list in ViewBag.KnayfKleinSize)
-                                                    {
-                                                        <tr >
-                                                            <th scope="row"><input name="internDoppelKlein" class="form-control" value="@list.Intern" type="number" step="0,01" /></th>
-                                                            <td><input name="priesDoppelKlein" class="form-control" type="number" value="@list.costSizeIntern" step="0,01" /></td>
-                                                        </tr>
-                                                    }
-
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-
+                                    <button type="button" onclick="newKlein()" class="btn danger">Create New Size</button>
                                 </div>
                              
                             <div id="productOptions">
@@ -439,41 +453,14 @@
                                 </div>
                             </div>
 
-                            <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
-                                <h5>Für zylinder aussen klein</h5>
-                                <div id="kleinGrose">
-                                    <div id="kleinSize">
-                                        <div>
-                                            <h5>Aussen</h5>
-                                            <input type="number" class="form-control" value="0" name="ausKlein" />
-                                        </div>
-                                        <div>
-                                            <h5>Preis</h5>
-                                            <input type="number" class="form-control" step="0,00" value="0" name="ausKleinPreis" />
-                                        </div>
-                                    </div>
-                                    <div class="arrow-right">
-                                    </div>
-                                    <div>
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th>Wert</th>
-                                                    <th>Preis</th>
-                                                    <th><button type="button" onclick="PlusKleinIntert()" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern()">-</button></th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="kleiIntern">
-                                                <tr>
-                                                    <th scope="row"><input class="form-control" name="internDoppelKlein" type="number" step="0,01" /></th>
-                                                    <td><input class="form-control" name="priesDoppelKlein" type="number" step="0,01" /></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
+                                <div id="Aussen_innen_klein" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
 
-                            </div>
+                                    <div>
+                                        <h5>Für zylinder aussen klein</h5>
+                                    </div>
+
+                                    <button type="button" onclick="newKlein()" class="btn danger">Create New Size</button>
+                                </div>
 
                             <div id="productOptions">
                             </div>
@@ -591,34 +578,103 @@
 
         }
 
+        let countKleinBlock = 1;
 
-        let table = document.getElementById("kleiIntern");
+        function newKlein() {
 
-        function PlusKleinIntert() 
-        {
-            let row = `   <tr>
-                                            <th><input class="form-control" name="internDoppelKlein" type="number" step="0,01" /></th>
-                                               <td><input class="form-control" name="priesDoppelKlein" step="0,01" type="number" /></td>
-                            </tr> `;
+            let Aussen_innen_klein = document.getElementById("Aussen_innen_klein");
 
-            table.insertAdjacentHTML('beforeend', row);
+            countKleinBlock++;
+
+            let block = ` <div id="kleinGrose" class="kleinZise-${countKleinBlock}">
+                                                        <div>
+                                                            <div>
+                                                                <h5>Aussen</h5>
+                                                            <input type="number" class="form-control" value="" name="ausKlein" />
+                                                            </div>
+                                                            <div>
+                                                                <h5>Preis</h5>
+                                                            <input type="number" class="form-control" step="0,00" value="" name="ausKleinPreis" />
+                                                            </div>
+                                                        </div>
+                                                        <div class="arrow-right">
+                                                        </div>
+                                                        <div>
+                                                            <table class="table">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th>Wert</th>
+                                                                        <th>Preis</th>
+                                                                             <th><button type="button" onclick="PlusKleinIntert(${countKleinBlock})" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern(${countKleinBlock})">-</button></th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody id="kleiIntern">
+
+
+                                                                            <tr>
+                                                                            <th><input name="internDoppelKlein" class="form-control" value="" type="number" step="0,01" /></th>
+                                                                            <td><input name="priesDoppelKlein" class="form-control" type="number" value="" step="0,01" /></td>
+                                                                            </tr>
+                                                                </tbody>
+                                                            </table>
+                                                                        <input type="hidden" name="KleinZiseCount"  />
+                                                        </div>
+                                                    </div>`;
+
+            Aussen_innen_klein.innerHTML += block;
+
+            let blockItem = document.querySelector(`.kleinZise-${countKleinBlock}`);
+
+            let tableSearch = blockItem.childNodes[5].childNodes[1].childNodes[3];
+
+            let count = tableSearch.querySelectorAll('input[type="number"]').length;
+
+            let countValue = blockItem.childNodes[5].childNodes[3];
+
+            countValue.value = count / 2;
         }
 
-        function MinusKleinIntern() 
-        {
-            let countelem = table.querySelectorAll("tr");
+        function PlusKleinIntert(blockNumber) {
 
-            let kleinSize = document.getElementById("Aussen_innen_klein");
+            let block = document.querySelector(`.kleinZise-${blockNumber}`);
+            let tableSearch = block.childNodes[5].childNodes[1].childNodes[3];
+
+            let row = `   <tr>
+                                                        <th><input name="internDoppelKlein" class="form-control" type="number" step="0,01" /></th>
+                                                           <td><input class="form-control" name="priesDoppelKlein" step="0,01" type="number" /></td>
+                                                </tr> `;
+
+            tableSearch.insertAdjacentHTML('beforeend', row);
+
+            let count = tableSearch.querySelectorAll('input[type="number"]').length;
+
+            let countValue = block.childNodes[5].childNodes[3];
+
+            countValue.value = count / 2;
+        }
+
+        function MinusKleinIntern(blockNumber) {
+            let block = document.querySelector(`.kleinZise-${blockNumber}`);
+
+            let tableSearch = block.childNodes[5].childNodes[1].childNodes[3];
+
+            let countelem = tableSearch.querySelectorAll("tr");
 
             if (countelem.length == 0) {
-                kleinSize.remove();
+                block.remove();
             }
             else {
                 countelem[countelem.length - 1].remove();
             }
+
+
+            let count = tableSearch.querySelectorAll('input[type="number"]').length;
+
+            let countValue = block.childNodes[5].childNodes[3];
+
+            countValue.value = count / 2;
         }
-
-
+       
         tinymce.init({
             selector: '#exampleFormControlTextarea1',
             plugins: [
