--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -373,10 +373,27 @@
                             <div>
                                     <select class="form-select" name="KnayfIntern" id="Intern" onchange="selectParamIntern(@d,'Knaufzylinder',event.target.selectedIndex)">
                                     <option style="display:none" selected>@ViewBag.KInter[elemNum]</option>
+                                   
                                     @for (int i = 0; i < ViewBag.KnayfZelinderIntern.Count; i++)
                                     {
-                                       <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                                if (ViewBag.CountDoppelInter != "null")
+                                                {
+                                                    if (i < ViewBag.CountKlein)
+                                                    {
+                                                       <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option style="display:none" id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                                    }
+
+                                                }
+                                                else
+                                                {
+                                                    <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                                }   
                                     }
+
                                 </select>
                                  <input type="hidden" id="Innen-@d" />
                             </div>
